@@ -1,6 +1,8 @@
 2010-09-04  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* image.c (imagemagick_image_p): Replace bcopy by memcpy.
+	(imagemagick_load_image): Fix type mismatch.
+	(Fimagemagick_types): Likewise.
 
 2010-09-02  Jan Djärv  <jan.h.d@swipnet.se>
 
